--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,28 @@
 language: csharp
-dotnet: 1.0.0-rc4-004771
 
 sudo: false  # use the new container-based Travis infrastructure 
+
+matrix:
+  include:
+    - os: linux # Ubuntu 14.04
+      dist: trusty
+      sudo: required
+      env: DOTNET_SDK_URL=https://go.microsoft.com/fwlink/?linkid=841683 # v1.0.0-rc4-004771
+    - os: osx # OSX 10.11
+      osx_image: xcode7.2
+      env: DOTNET_SDK_URL=https://go.microsoft.com/fwlink/?linkid=841683 # v1.0.0-rc4-004771
+
+before install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update               ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install openssl      ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link --force openssl ; fi
+
+install:
+  # Download dotnet sdk and add to PATH
+  - export DOTNET_INSTALL_DIR="$PWD/.dotnetsdk"
+  - mkdir -p "$DOTNET_INSTALL_DIR"
+  - curl -L "$DOTNET_SDK_URL" | tar -xzv -C "$DOTNET_INSTALL_DIR"
+  - export PATH="$DOTNET_INSTALL_DIR:$PATH"
 
 script: 
   - dotnet --version
