--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: csharp
 
 sudo: false  # use the new container-based Travis infrastructure 
 
+mono: 4.4.2
+
 matrix:
   include:
     - os: linux # Ubuntu 14.04
@@ -9,7 +11,7 @@ matrix:
       sudo: required
       env: DOTNET_SDK_URL=https://go.microsoft.com/fwlink/?linkid=841683 # v1.0.0-rc4-004771
     - os: osx # OSX 10.11
-      osx_image: xcode7.2
+      osx_image: xcode7.3
       env: DOTNET_SDK_URL=https://go.microsoft.com/fwlink/?linkid=841683 # v1.0.0-rc4-004771
 
 before install:
